RESOLVED FIXED29246
[Qt] State of navigation buttons aren't updated
https://bugs.webkit.org/show_bug.cgi?id=29246
Summary [Qt] State of navigation buttons aren't updated
Jędrzej Nowacki
Reported 2009-09-14 09:45:08 PDT
If state QWebHistory object change, update action on some buttons (back, forward...) should be triggered. For example after call QWebHistory::clear() goBack and goForward buttons should be disabled.
Attachments
Proposed path (2.63 KB, patch)
2009-09-14 09:48 PDT, Jędrzej Nowacki
eric: review-
eric: commit-queue-
Proposed path v2 (4.70 KB, patch)
2009-09-23 02:54 PDT, Jędrzej Nowacki
no flags
Jędrzej Nowacki
Comment 1 2009-09-14 09:48:51 PDT
Created attachment 39548 [details] Proposed path Path change clear() and restoreState() methods
Eric Seidel (no email)
Comment 2 2009-09-22 14:36:52 PDT
Comment on attachment 39548 [details] Proposed path //update navi buttons Comments should be proper english sentences, starting with a capital ending with a period. Also, I believe the style guide asks for a space after the //. Regarding the rest of the change, I have no comment. Although ideally it should have a test if that's possible, or an explanation in the ChangeLog of why a test is impossible/impractical.
Jędrzej Nowacki
Comment 3 2009-09-23 02:54:26 PDT
Created attachment 39984 [details] Proposed path v2 Comments were removed. Autotests were developed.
Simon Hausmann
Comment 4 2009-09-23 14:44:02 PDT
Comment on attachment 39984 [details] Proposed path v2 r=me. Thanks.
WebKit Commit Bot
Comment 5 2009-09-23 17:33:18 PDT
Comment on attachment 39984 [details] Proposed path v2 Clearing flags on attachment: 39984 Committed r48688: <http://trac.webkit.org/changeset/48688>
WebKit Commit Bot
Comment 6 2009-09-23 17:33:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.