third_party/WebKit/WebKit/qt/Api/qwebhistory_p.h
@@ -26,6 +26,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QtCore/qglobal.h>
 #include <QtCore/qshareddata.h>
 
+class QWebPagePrivate;
+
 class Q_AUTOTEST_EXPORT QWebHistoryItemPrivate : public QSharedData {
 public:
     static QExplicitlySharedDataPointer<QWebHistoryItemPrivate> get(QWebHistoryItem* q)
@@ -58,6 +60,9 @@ public:
     {
         lst->deref();
     }
+
+    QWebPagePrivate* page();
+
     WebCore::BackForwardList* lst;
 };
 
